--- a/void/resources/linux/code.desktop
+++ b/void/resources/linux/code.desktop
@@ -17,6 +17,7 @@ Name=New Empty Window
 Name[cs]=Nové prázdné okno
 Name[de]=Neues leeres Fenster
 Name[es]=Nueva ventana vacía
+Name[fa]=پنجره خالی جدید
 Name[fr]=Nouvelle fenêtre vide
 Name[it]=Nuova finestra vuota
 Name[ja]=新しい空のウィンドウ
