--- a/void/extensions/radd-assistant/package.json
+++ b/void/extensions/radd-assistant/package.json
@@ -54,6 +54,52 @@
 	],
 	"main": "./dist/extension.js",
 	"contributes": {
+		"configurationDefaults": {
+			"workbench.activityBar.location": "default",
+			"workbench.sideBar.location": "right",
+			"workbench.panel.defaultLocation": "bottom",
+			"workbench.panel.opensMaximized": "never",
+			"workbench.startupEditor": "welcomePage",
+			"workbench.tips.enabled": false,
+			"workbench.editor.showTabs": "multiple",
+			"workbench.editor.enablePreview": true,
+			"workbench.statusBar.visible": true,
+			"workbench.layoutControl.enabled": false,
+			"workbench.colorTheme": "Default Dark+",
+			"workbench.iconTheme": "vs-seti",
+			"editor.wordWrap": "on",
+			"editor.minimap.enabled": false,
+			"editor.lineNumbers": "off",
+			"editor.glyphMargin": false,
+			"editor.folding": false,
+			"editor.renderWhitespace": "none",
+			"editor.bracketPairColorization.enabled": false,
+			"editor.fontSize": 14,
+			"breadcrumbs.enabled": false,
+			"explorer.compactFolders": false,
+			"explorer.confirmDelete": true,
+			"explorer.confirmDragAndDrop": true,
+			"explorer.decorations.badges": true,
+			"outline.showVariables": false,
+			"outline.showProperties": false,
+			"terminal.integrated.defaultProfile.windows": "PowerShell",
+			"terminal.integrated.fontSize": 13,
+			"terminal.integrated.hideOnStartup": "whenEmpty",
+			"search.exclude": {
+				"**/node_modules": true,
+				"**/.git": true,
+				"**/.kilocode": true
+			},
+			"files.exclude": {
+				"**/.git": true,
+				"**/.DS_Store": true
+			},
+			"scm.defaultViewMode": "tree",
+			"debug.console.fontSize": 13,
+			"debug.showInStatusBar": "never",
+			"git.enabled": true,
+			"git.decorations.enabled": true
+		},
 		"walkthroughs": [
 			{
 				"id": "kiloCodeWalkthrough",
@@ -109,21 +155,19 @@
 		"viewsContainers": {
 			"activitybar": [
 				{
-					"id": "kilo-code-ActivityBar",
-					"title": "%views.activitybar.title%",
-					"icon": "assets/icons/kilo.png",
-					"darkIcon": "assets/icons/kilo-dark.png"
+					"id": "radd-assistant-ActivityBar",
+					"title": "دستیار راد",
+					"icon": "assets/icons/radd.png"
 				}
 			]
 		},
 		"views": {
-			"kilo-code-ActivityBar": [
+			"radd-assistant-ActivityBar": [
 				{
 					"type": "webview",
 					"id": "radd-assistant.SidebarProvider",
-					"name": "%views.sidebar.name%",
-					"icon": "assets/icons/kilo.png",
-					"darkIcon": "assets/icons/kilo-dark.png"
+					"name": "دستیار هوشمند",
+					"icon": "assets/icons/radd.png"
 				}
 			]
 		},
