--- a/void/extensions/radd-assistant/package.json
+++ b/void/extensions/radd-assistant/package.json
@@ -55,50 +55,149 @@
 	"main": "./dist/extension.js",
 	"contributes": {
 		"configurationDefaults": {
+			"workbench.startupEditor": "welcomePage",
+			"workbench.colorTheme": "Default Dark+",
+			"workbench.iconTheme": "vs-seti",
 			"workbench.activityBar.location": "default",
 			"workbench.sideBar.location": "right",
 			"workbench.panel.defaultLocation": "bottom",
 			"workbench.panel.opensMaximized": "never",
-			"workbench.startupEditor": "welcomePage",
 			"workbench.tips.enabled": false,
 			"workbench.editor.showTabs": "multiple",
 			"workbench.editor.enablePreview": true,
+			"workbench.editor.highlightModifiedTabs": true,
+			"workbench.editor.tabSizing": "fit",
 			"workbench.statusBar.visible": true,
 			"workbench.layoutControl.enabled": false,
-			"workbench.colorTheme": "Default Dark+",
-			"workbench.iconTheme": "vs-seti",
+			"workbench.tree.indent": 16,
+			"workbench.tree.renderIndentGuides": "always",
+			"editor.fontSize": 14,
+			"editor.fontFamily": "Vazirmatn, Consolas, 'Courier New', monospace",
+			"editor.fontLigatures": false,
 			"editor.wordWrap": "on",
+			"editor.wordWrapColumn": 120,
 			"editor.minimap.enabled": false,
 			"editor.lineNumbers": "off",
 			"editor.glyphMargin": false,
 			"editor.folding": false,
 			"editor.renderWhitespace": "none",
 			"editor.bracketPairColorization.enabled": false,
-			"editor.fontSize": 14,
+			"editor.cursorBlinking": "smooth",
+			"editor.cursorStyle": "line",
+			"editor.smoothScrolling": true,
+			"editor.mouseWheelZoom": true,
+			"editor.linkedEditing": true,
+			"editor.suggest.showStatusBar": true,
+			"editor.quickSuggestions": {
+				"other": true,
+				"comments": false,
+				"strings": false
+			},
+			"editor.acceptSuggestionOnEnter": "on",
+			"editor.tabCompletion": "on",
+			"editor.formatOnPaste": false,
+			"editor.formatOnSave": false,
+			"editor.autoClosingBrackets": "languageDefined",
+			"editor.autoClosingQuotes": "languageDefined",
+			"editor.autoIndent": "full",
+			"editor.detectIndentation": true,
+			"editor.insertSpaces": false,
+			"editor.tabSize": 4,
+			"editor.unicodeHighlight.ambiguousCharacters": false,
+			"editor.unicodeHighlight.invisibleCharacters": false,
 			"breadcrumbs.enabled": false,
 			"explorer.compactFolders": false,
 			"explorer.confirmDelete": true,
 			"explorer.confirmDragAndDrop": true,
 			"explorer.decorations.badges": true,
+			"explorer.decorations.colors": true,
+			"explorer.sortOrder": "default",
+			"explorer.autoReveal": true,
 			"outline.showVariables": false,
 			"outline.showProperties": false,
+			"outline.showFunctions": true,
+			"outline.showClasses": true,
 			"terminal.integrated.defaultProfile.windows": "PowerShell",
 			"terminal.integrated.fontSize": 13,
+			"terminal.integrated.fontFamily": "Vazirmatn, Consolas, 'Courier New', monospace",
 			"terminal.integrated.hideOnStartup": "whenEmpty",
+			"terminal.integrated.cursorBlinking": true,
+			"terminal.integrated.cursorStyle": "line",
+			"terminal.integrated.scrollback": 5000,
+			"terminal.integrated.enablePersistentSessions": true,
+			"terminal.integrated.confirmOnExit": "hasChildProcesses",
+			"terminal.integrated.copyOnSelection": true,
 			"search.exclude": {
 				"**/node_modules": true,
 				"**/.git": true,
-				"**/.kilocode": true
+				"**/.kilocode": true,
+				"**/.radd": true,
+				"**/bower_components": true,
+				"**/*.code-search": true
 			},
+			"search.useIgnoreFiles": true,
+			"search.useGlobalIgnoreFiles": true,
+			"search.showLineNumbers": true,
+			"search.smartCase": true,
 			"files.exclude": {
 				"**/.git": true,
-				"**/.DS_Store": true
+				"**/.DS_Store": true,
+				"**/.svn": true,
+				"**/.hg": true,
+				"**/CVS": true,
+				"**/.radd": true,
+				"**/Thumbs.db": true,
+				"**/desktop.ini": true
+			},
+			"files.associations": {
+				"*.txt": "plaintext",
+				"*.log": "log",
+				"*.md": "markdown",
+				"*.json": "json",
+				"*.csv": "csv",
+				"*.xml": "xml",
+				"*.html": "html",
+				"*.htm": "html"
+			},
+			"files.autoSave": "afterDelay",
+			"files.autoSaveDelay": 1000,
+			"files.encoding": "utf8",
+			"files.eol": "auto",
+			"files.trimTrailingWhitespace": false,
+			"files.insertFinalNewline": false,
+			"files.trimFinalNewlines": false,
+			"files.defaultLanguage": "plaintext",
+			"files.watcherExclude": {
+				"**/.git/objects/**": true,
+				"**/.git/subtree-cache/**": true,
+				"**/node_modules/**": true,
+				"**/.hg/store/**": true,
+				"**/.radd/**": true
 			},
 			"scm.defaultViewMode": "tree",
+			"scm.alwaysShowRepositories": false,
+			"scm.autoReveal": true,
 			"debug.console.fontSize": 13,
 			"debug.showInStatusBar": "never",
+			"debug.openDebug": "neverOpen",
+			"debug.internalConsoleOptions": "neverOpen",
 			"git.enabled": true,
-			"git.decorations.enabled": true
+			"git.decorations.enabled": true,
+			"git.autofetch": false,
+			"git.confirmSync": true,
+			"git.enableSmartCommit": true,
+			"git.showPushSuccessNotification": true,
+			"window.title": "${dirty}${activeEditorShort}${separator}${rootName}${separator}راد",
+			"window.zoomLevel": 0,
+			"zenMode.hideLineNumbers": true,
+			"zenMode.hideStatusBar": true,
+			"zenMode.hideActivityBar": true,
+			"zenMode.centerLayout": true,
+			"zenMode.fullScreen": true,
+			"problems.showCurrentInStatus": true,
+			"problems.decorations.enabled": true,
+			"problems.autoReveal": true,
+			"accessibility.underlineLinks": true
 		},
 		"walkthroughs": [
 			{
