--- a/void/extensions/radd-assistant/package.json
+++ b/void/extensions/radd-assistant/package.json
@@ -59,29 +59,29 @@
 			"workbench.colorTheme": "Default Dark+",
 			"workbench.iconTheme": "vs-seti",
 			"workbench.activityBar.location": "default",
-			"workbench.sideBar.location": "right",
+			"workbench.sideBar.location": "left",
 			"workbench.panel.defaultLocation": "bottom",
 			"workbench.panel.opensMaximized": "never",
-			"workbench.tips.enabled": false,
+			"workbench.tips.enabled": true,
 			"workbench.editor.showTabs": "multiple",
 			"workbench.editor.enablePreview": true,
 			"workbench.editor.highlightModifiedTabs": true,
 			"workbench.editor.tabSizing": "fit",
 			"workbench.statusBar.visible": true,
-			"workbench.layoutControl.enabled": false,
+			"workbench.layoutControl.enabled": true,
 			"workbench.tree.indent": 16,
 			"workbench.tree.renderIndentGuides": "always",
 			"editor.fontSize": 14,
-			"editor.fontFamily": "Vazirmatn, Consolas, 'Courier New', monospace",
-			"editor.fontLigatures": false,
+			"editor.fontFamily": "Consolas, 'Courier New', monospace",
+			"editor.fontLigatures": true,
 			"editor.wordWrap": "on",
 			"editor.wordWrapColumn": 120,
-			"editor.minimap.enabled": false,
-			"editor.lineNumbers": "off",
-			"editor.glyphMargin": false,
-			"editor.folding": false,
-			"editor.renderWhitespace": "none",
-			"editor.bracketPairColorization.enabled": false,
+			"editor.minimap.enabled": true,
+			"editor.lineNumbers": "on",
+			"editor.glyphMargin": true,
+			"editor.folding": true,
+			"editor.renderWhitespace": "selection",
+			"editor.bracketPairColorization.enabled": true,
 			"editor.cursorBlinking": "smooth",
 			"editor.cursorStyle": "line",
 			"editor.smoothScrolling": true,
@@ -91,11 +91,11 @@
 			"editor.quickSuggestions": {
 				"other": true,
 				"comments": false,
-				"strings": false
+				"strings": true
 			},
 			"editor.acceptSuggestionOnEnter": "on",
 			"editor.tabCompletion": "on",
-			"editor.formatOnPaste": false,
+			"editor.formatOnPaste": true,
 			"editor.formatOnSave": false,
 			"editor.autoClosingBrackets": "languageDefined",
 			"editor.autoClosingQuotes": "languageDefined",
@@ -103,9 +103,9 @@
 			"editor.detectIndentation": true,
 			"editor.insertSpaces": false,
 			"editor.tabSize": 4,
-			"editor.unicodeHighlight.ambiguousCharacters": false,
-			"editor.unicodeHighlight.invisibleCharacters": false,
-			"breadcrumbs.enabled": false,
+			"editor.unicodeHighlight.ambiguousCharacters": true,
+			"editor.unicodeHighlight.invisibleCharacters": true,
+			"breadcrumbs.enabled": true,
 			"explorer.compactFolders": false,
 			"explorer.confirmDelete": true,
 			"explorer.confirmDragAndDrop": true,
@@ -118,8 +118,8 @@
 			"outline.showFunctions": true,
 			"outline.showClasses": true,
 			"terminal.integrated.defaultProfile.windows": "PowerShell",
-			"terminal.integrated.fontSize": 13,
-			"terminal.integrated.fontFamily": "Vazirmatn, Consolas, 'Courier New', monospace",
+			"terminal.integrated.fontSize": 14,
+			"terminal.integrated.fontFamily": "Consolas, 'Courier New', monospace",
 			"terminal.integrated.hideOnStartup": "whenEmpty",
 			"terminal.integrated.cursorBlinking": true,
 			"terminal.integrated.cursorStyle": "line",
@@ -290,6 +290,12 @@
 				"command": "radd-assistant.exportSettings",
 				"title": "Export Settings",
 				"category": "%configuration.title%"
+			},
+			{
+				"command": "radd-assistant.toggleDeveloperMode",
+				"title": "تغییر حالت رابط کاربری (Toggle Developer Mode)",
+				"category": "%configuration.title%",
+				"icon": "$(tools)"
 			},
 			{
 				"command": "radd-assistant.promptsButtonClicked",
@@ -771,6 +777,12 @@
 					"type": "boolean",
 					"default": false,
 					"description": "%settings.debug.description%"
+				},
+				"radd-assistant.developerMode": {
+					"type": "boolean",
+					"default": false,
+					"description": "حالت توسعه‌دهنده - فعال کردن رابط کاربری استاندارد VS Code (Developer Mode - Enable standard VS Code UI)",
+					"markdownDescription": "**حالت توسعه‌دهنده**\n\nفعال: رابط کاربری استاندارد VS Code با تمام امکانات برنامه‌نویسی\n\nغیرفعال: رابط کاربری ساده شده برای کاربران کسب و کار"
 				}
 			}
 		},
