--- a/void/extensions/radd-assistant/package.json
+++ b/void/extensions/radd-assistant/package.json
@@ -54,151 +54,6 @@
 	],
 	"main": "./dist/extension.js",
 	"contributes": {
-		"configurationDefaults": {
-			"workbench.startupEditor": "welcomePage",
-			"workbench.colorTheme": "Default Dark+",
-			"workbench.iconTheme": "vs-seti",
-			"workbench.activityBar.location": "default",
-			"workbench.sideBar.location": "left",
-			"workbench.panel.defaultLocation": "bottom",
-			"workbench.panel.opensMaximized": "never",
-			"workbench.tips.enabled": true,
-			"workbench.editor.showTabs": "multiple",
-			"workbench.editor.enablePreview": true,
-			"workbench.editor.highlightModifiedTabs": true,
-			"workbench.editor.tabSizing": "fit",
-			"workbench.statusBar.visible": true,
-			"workbench.layoutControl.enabled": true,
-			"workbench.tree.indent": 16,
-			"workbench.tree.renderIndentGuides": "always",
-			"editor.fontSize": 14,
-			"editor.fontFamily": "Consolas, 'Courier New', monospace",
-			"editor.fontLigatures": true,
-			"editor.wordWrap": "on",
-			"editor.wordWrapColumn": 120,
-			"editor.minimap.enabled": true,
-			"editor.lineNumbers": "on",
-			"editor.glyphMargin": true,
-			"editor.folding": true,
-			"editor.renderWhitespace": "selection",
-			"editor.bracketPairColorization.enabled": true,
-			"editor.cursorBlinking": "smooth",
-			"editor.cursorStyle": "line",
-			"editor.smoothScrolling": true,
-			"editor.mouseWheelZoom": true,
-			"editor.linkedEditing": true,
-			"editor.suggest.showStatusBar": true,
-			"editor.quickSuggestions": {
-				"other": true,
-				"comments": false,
-				"strings": true
-			},
-			"editor.acceptSuggestionOnEnter": "on",
-			"editor.tabCompletion": "on",
-			"editor.formatOnPaste": true,
-			"editor.formatOnSave": false,
-			"editor.autoClosingBrackets": "languageDefined",
-			"editor.autoClosingQuotes": "languageDefined",
-			"editor.autoIndent": "full",
-			"editor.detectIndentation": true,
-			"editor.insertSpaces": false,
-			"editor.tabSize": 4,
-			"editor.unicodeHighlight.ambiguousCharacters": true,
-			"editor.unicodeHighlight.invisibleCharacters": true,
-			"breadcrumbs.enabled": true,
-			"explorer.compactFolders": false,
-			"explorer.confirmDelete": true,
-			"explorer.confirmDragAndDrop": true,
-			"explorer.decorations.badges": true,
-			"explorer.decorations.colors": true,
-			"explorer.sortOrder": "default",
-			"explorer.autoReveal": true,
-			"outline.showVariables": false,
-			"outline.showProperties": false,
-			"outline.showFunctions": true,
-			"outline.showClasses": true,
-			"terminal.integrated.defaultProfile.windows": "PowerShell",
-			"terminal.integrated.fontSize": 14,
-			"terminal.integrated.fontFamily": "Consolas, 'Courier New', monospace",
-			"terminal.integrated.hideOnStartup": "whenEmpty",
-			"terminal.integrated.cursorBlinking": true,
-			"terminal.integrated.cursorStyle": "line",
-			"terminal.integrated.scrollback": 5000,
-			"terminal.integrated.enablePersistentSessions": true,
-			"terminal.integrated.confirmOnExit": "hasChildProcesses",
-			"terminal.integrated.copyOnSelection": true,
-			"search.exclude": {
-				"**/node_modules": true,
-				"**/.git": true,
-				"**/.kilocode": true,
-				"**/.radd": true,
-				"**/bower_components": true,
-				"**/*.code-search": true
-			},
-			"search.useIgnoreFiles": true,
-			"search.useGlobalIgnoreFiles": true,
-			"search.showLineNumbers": true,
-			"search.smartCase": true,
-			"files.exclude": {
-				"**/.git": true,
-				"**/.DS_Store": true,
-				"**/.svn": true,
-				"**/.hg": true,
-				"**/CVS": true,
-				"**/.radd": true,
-				"**/Thumbs.db": true,
-				"**/desktop.ini": true
-			},
-			"files.associations": {
-				"*.txt": "plaintext",
-				"*.log": "log",
-				"*.md": "markdown",
-				"*.json": "json",
-				"*.csv": "csv",
-				"*.xml": "xml",
-				"*.html": "html",
-				"*.htm": "html"
-			},
-			"files.autoSave": "afterDelay",
-			"files.autoSaveDelay": 1000,
-			"files.encoding": "utf8",
-			"files.eol": "auto",
-			"files.trimTrailingWhitespace": false,
-			"files.insertFinalNewline": false,
-			"files.trimFinalNewlines": false,
-			"files.defaultLanguage": "plaintext",
-			"files.watcherExclude": {
-				"**/.git/objects/**": true,
-				"**/.git/subtree-cache/**": true,
-				"**/node_modules/**": true,
-				"**/.hg/store/**": true,
-				"**/.radd/**": true
-			},
-			"scm.defaultViewMode": "tree",
-			"scm.alwaysShowRepositories": false,
-			"scm.autoReveal": true,
-			"debug.console.fontSize": 13,
-			"debug.showInStatusBar": "never",
-			"debug.openDebug": "neverOpen",
-			"debug.internalConsoleOptions": "neverOpen",
-			"git.enabled": true,
-			"git.decorations.enabled": true,
-			"git.autofetch": false,
-			"git.confirmSync": true,
-			"git.enableSmartCommit": true,
-			"git.showPushSuccessNotification": true,
-			"window.title": "${dirty}${activeEditorShort}${separator}${rootName}${separator}راد",
-			"window.zoomLevel": 0,
-			"zenMode.hideLineNumbers": true,
-			"zenMode.hideStatusBar": true,
-			"zenMode.hideActivityBar": true,
-			"zenMode.centerLayout": true,
-			"zenMode.fullScreen": true,
-			"problems.showCurrentInStatus": true,
-			"problems.decorations.enabled": true,
-			"problems.autoReveal": true,
-			"accessibility.underlineLinks": true
-		},
 		"walkthroughs": [
 			{
 				"id": "kiloCodeWalkthrough",
@@ -255,8 +110,9 @@
 			"activitybar": [
 				{
 					"id": "radd-assistant-ActivityBar",
-					"title": "دستیار راد",
-					"icon": "assets/icons/radd.png"
+					"title": "%views.activitybar.title%",
+					"icon": "assets/icons/kilo.png",
+					"darkIcon": "assets/icons/kilo-dark.png"
 				}
 			]
 		},
@@ -265,12 +121,28 @@
 				{
 					"type": "webview",
 					"id": "radd-assistant.SidebarProvider",
-					"name": "دستیار هوشمند",
-					"icon": "assets/icons/radd.png"
+					"name": "%views.sidebar.name%",
+					"icon": "assets/icons/kilo.png",
+					"darkIcon": "assets/icons/kilo-dark.png"
 				}
 			]
 		},
 		"commands": [
+			{
+				"command": "radd.openOnboarding",
+				"title": "Open Radd Onboarding",
+				"category": "Radd"
+			},
+			{
+				"command": "radd.openWelcome",
+				"title": "Open Radd Welcome",
+				"category": "Radd"
+			},
+			{
+				"command": "radd.createSampleWorkspace",
+				"title": "Create Sample Workspace",
+				"category": "Radd"
+			},
 			{
 				"command": "radd-assistant.plusButtonClicked",
 				"title": "%command.newTask.title%",
@@ -290,12 +162,6 @@
 				"command": "radd-assistant.exportSettings",
 				"title": "Export Settings",
 				"category": "%configuration.title%"
-			},
-			{
-				"command": "radd-assistant.toggleDeveloperMode",
-				"title": "تغییر حالت رابط کاربری (Toggle Developer Mode)",
-				"category": "%configuration.title%",
-				"icon": "$(tools)"
 			},
 			{
 				"command": "radd-assistant.promptsButtonClicked",
@@ -777,12 +643,6 @@
 					"type": "boolean",
 					"default": false,
 					"description": "%settings.debug.description%"
-				},
-				"radd-assistant.developerMode": {
-					"type": "boolean",
-					"default": false,
-					"description": "حالت توسعه‌دهنده - فعال کردن رابط کاربری استاندارد VS Code (Developer Mode - Enable standard VS Code UI)",
-					"markdownDescription": "**حالت توسعه‌دهنده**\n\nفعال: رابط کاربری استاندارد VS Code با تمام امکانات برنامه‌نویسی\n\nغیرفعال: رابط کاربری ساده شده برای کاربران کسب و کار"
 				}
 			}
 		},
@@ -823,6 +683,146 @@
 		"clean": "rimraf README.md CHANGELOG.md LICENSE dist logs mock .turbo"
 	},
 	"dependencies": {
-		"@lancedb/lancedb": "^0.21.2"
+		"@anthropic-ai/bedrock-sdk": "^0.22.0",
+		"@anthropic-ai/sdk": "^0.51.0",
+		"@anthropic-ai/vertex-sdk": "^0.11.3",
+		"@aws-sdk/client-bedrock-runtime": "^3.922.0",
+		"@aws-sdk/credential-providers": "^3.922.0",
+		"@cerebras/cerebras_cloud_sdk": "^1.35.0",
+		"@google/genai": "^1.29.1",
+		"@lancedb/lancedb": "^0.21.2",
+		"@lmstudio/sdk": "^1.1.1",
+		"@mistralai/mistralai": "^1.9.18",
+		"@modelcontextprotocol/sdk": "1.13.3",
+		"@qdrant/js-client-rest": "^1.14.0",
+		"@roo-code/cloud": "workspace:^",
+		"@roo-code/ipc": "workspace:^",
+		"@roo-code/telemetry": "workspace:^",
+		"@roo-code/types": "workspace:^",
+		"@sap-ai-sdk/foundation-models": "^2.2.0",
+		"@sap-ai-sdk/orchestration": "^2.2.0",
+		"@vscode/codicons": "^0.0.36",
+		"async-mutex": "^0.5.0",
+		"axios": "^1.12.0",
+		"cheerio": "^1.0.0",
+		"chokidar": "^4.0.1",
+		"clone-deep": "^4.0.1",
+		"default-shell": "^2.2.0",
+		"delay": "^6.0.0",
+		"diff": "^7.0.0",
+		"diff-match-patch": "^1.0.5",
+		"fast-deep-equal": "^3.1.3",
+		"fast-xml-parser": "^5.0.0",
+		"fastest-levenshtein": "^1.0.16",
+		"form-data": ">=4.0.4",
+		"fuse.js": "^7.1.0",
+		"fzf": "^0.5.2",
+		"get-folder-size": "^5.0.0",
+		"google-auth-library": "^9.15.1",
+		"gray-matter": "^4.0.3",
+		"i18next": "^25.0.0",
+		"ignore": "^7.0.3",
+		"is-wsl": "^3.1.0",
+		"isbinaryfile": "^5.0.2",
+		"js-tiktoken": "^1.0.8",
+		"jsdom": "^26.0.0",
+		"json5": "^2.2.3",
+		"jwt-decode": "^4.0.0",
+		"lodash.debounce": "^4.0.8",
+		"lru-cache": "^11.1.0",
+		"mammoth": "^1.11.0",
+		"monaco-vscode-textmate-theme-converter": "^0.1.7",
+		"node-cache": "^5.1.2",
+		"node-ipc": "^12.0.0",
+		"node-machine-id": "^1.1.12",
+		"ollama": "^0.5.17",
+		"openai": "^5.12.2",
+		"os-name": "^6.0.0",
+		"p-limit": "^6.2.0",
+		"p-map": "^7.0.3",
+		"p-retry": "^7.1.0",
+		"p-wait-for": "^5.0.2",
+		"partial-json": "^0.1.7",
+		"pdf-parse": "^1.1.1",
+		"pkce-challenge": "^5.0.0",
+		"pretty-bytes": "^7.0.0",
+		"proper-lockfile": "^4.1.2",
+		"ps-list": "^8.1.1",
+		"puppeteer-chromium-resolver": "^24.0.0",
+		"puppeteer-core": "^23.4.0",
+		"quick-lru": "^7.0.0",
+		"reconnecting-eventsource": "^1.6.4",
+		"safe-stable-stringify": "^2.5.0",
+		"sanitize-filename": "^1.6.3",
+		"say": "^0.16.0",
+		"semver-compare": "^1.0.0",
+		"serialize-error": "^12.0.0",
+		"shell-quote": "^1.8.2",
+		"shiki": "^3.6.0",
+		"simple-git": "^3.27.0",
+		"socket.io-client": "^4.8.1",
+		"sound-play": "^1.1.0",
+		"stream-json": "^1.8.0",
+		"string-similarity": "^4.0.4",
+		"strip-ansi": "^7.1.0",
+		"strip-bom": "^5.0.0",
+		"tiktoken": "^1.0.21",
+		"tmp": "^0.2.3",
+		"tree-sitter-wasms": "^0.1.12",
+		"turndown": "^7.2.0",
+		"undici": "^7.13.0",
+		"uri-js": "^4.4.1",
+		"uuid": "^11.1.0",
+		"vscode-material-icons": "^0.1.1",
+		"web-tree-sitter": "^0.25.6",
+		"workerpool": "^9.2.0",
+		"ws": "^8.18.0",
+		"xlsx": "^0.18.5",
+		"yaml": "^2.8.0",
+		"zod": "^3.25.61"
+	},
+	"devDependencies": {
+		"@roo-code/build": "workspace:^",
+		"@roo-code/config-eslint": "workspace:^",
+		"@roo-code/config-typescript": "workspace:^",
+		"@types/clone-deep": "^4.0.4",
+		"@types/debug": "^4.1.12",
+		"@types/diff": "^7.0.2",
+		"@types/diff-match-patch": "^1.0.36",
+		"@types/glob": "^8.1.0",
+		"@types/jsdom": "^21.1.7",
+		"@types/json5": "^2.2.0",
+		"@types/lodash.debounce": "^4.0.9",
+		"@types/mocha": "^10.0.10",
+		"@types/node": "20.x",
+		"@types/node-cache": "^4.1.3",
+		"@types/node-ipc": "^9.2.3",
+		"@types/proper-lockfile": "^4.1.4",
+		"@types/ps-tree": "^1.1.6",
+		"@types/semver-compare": "^1.0.3",
+		"@types/shell-quote": "^1.7.5",
+		"@types/stream-json": "^1.7.8",
+		"@types/string-similarity": "^4.0.2",
+		"@types/tmp": "^0.2.6",
+		"@types/turndown": "^5.0.5",
+		"@types/vscode": "^1.84.0",
+		"@types/ws": "^8.5.13",
+		"@vscode/test-electron": "^2.5.2",
+		"@vscode/vsce": "3.3.2",
+		"dotenv": "^16.4.7",
+		"esbuild": "^0.25.0",
+		"execa": "^9.5.2",
+		"glob": "^11.1.0",
+		"mkdirp": "^3.0.1",
+		"myers-diff": "^2.1.0",
+		"nock": "^14.0.4",
+		"npm-run-all2": "^8.0.1",
+		"ovsx": "0.10.4",
+		"rimraf": "^6.1.0",
+		"tsup": "^8.4.0",
+		"tsx": "^4.19.3",
+		"typescript": "5.8.3",
+		"vitest": "^3.2.3",
+		"zod-to-ts": "^1.2.0"
 	}
 }
